--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     
         <script src="app.js"></script>
         <script src="variables.js"></script>
+        <script src="template-strings.js"></script>
     </body>
 </html>
