Added the arrow functions file.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <script src="app.js"></script>
         <script src="variables.js"></script>
         <script src="template-strings.js"></script>
+        <script src="arrow-functions.js"></script>
     </body>
 </html>
