--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <script src="variables.js"></script>
         <script src="template-strings.js"></script>
         <script src="arrow-functions.js"></script>
+        <script src="object-literals.js"></script>
     </body>
 </html>
