Adding the default function arguments example.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <script src="template-strings.js"></script>
         <script src="arrow-functions.js"></script>
         <script src="object-literals.js"></script>
+        <script src="default-function-arguments.js"></script>
     </body>
 </html>
