--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <script src="arrow-functions.js"></script>
         <script src="object-literals.js"></script>
         <script src="default-function-arguments.js"></script>
+        <script src="rest-spread-operators.js"></script>
     </body>
 </html>
