--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     </head>
     <body>
     
-        <script src="app.js"></script>
+        <script src="array-helpers.js"></script>
         <script src="variables.js"></script>
         <script src="template-strings.js"></script>
         <script src="arrow-functions.js"></script>
         <script src="object-literals.js"></script>
         <script src="default-function-arguments.js"></script>
         <script src="rest-spread-operators.js"></script>
+        <script src="destructuring.js"></script>
     </body>
 </html>
