fixed file structure to be clearer

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
     
-        <script src="array-helpers.js"></script>
-        <script src="variables.js"></script>
-        <script src="template-strings.js"></script>
-        <script src="arrow-functions.js"></script>
-        <script src="object-literals.js"></script>
-        <script src="default-function-arguments.js"></script>
-        <script src="rest-spread-operators.js"></script>
-        <script src="destructuring.js"></script>
+        <script src="src/array-helpers.js"></script>
+        <script src="src/variables.js"></script>
+        <script src="src/template-strings.js"></script>
+        <script src="src/arrow-functions.js"></script>
+        <script src="src/object-literals.js"></script>
+        <script src="src/default-function-arguments.js"></script>
+        <script src="src/rest-spread-operators.js"></script>
+        <script src="src/destructuring.js"></script>
     </body>
 </html>
