Added old constructor function.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <script src="src/default-function-arguments.js"></script>
         <script src="src/rest-spread-operators.js"></script>
         <script src="src/destructuring.js"></script>
+        <script src="src/classes.js"></script>
     </body>
 </html>
