Added new for...of loop file.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <script src="src/rest-spread-operators.js"></script>
         <script src="src/destructuring.js"></script>
         <script src="src/classes.js"></script>
+        <script src="src/for-of-loop.js"></script>
     </body>
 </html>
