--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <script src="src/destructuring.js"></script>
         <script src="src/classes.js"></script>
         <script src="src/for-of-loop.js"></script>
+        <script src="src/generators.js"></script>
     </body>
 </html>
