--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <script src="src/classes.js"></script>
         <script src="src/for-of-loop.js"></script>
         <script src="src/generators.js"></script>
+        <script src="src/generators-cont.js"></script>
     </body>
 </html>
