Added the promises file.

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <script src="src/for-of-loop.js"></script>
         <script src="src/generators.js"></script>
         <script src="src/generators-cont.js"></script>
+        <script src="src/promises.js"></script>
     </body>
 </html>
