--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
         <title>JS ES6</title>
     </head>
     <body>
-    
-        <script src="src/array-helpers.js"></script>
-        <script src="src/variables.js"></script>
-        <script src="src/template-strings.js"></script>
-        <script src="src/arrow-functions.js"></script>
-        <script src="src/object-literals.js"></script>
-        <script src="src/default-function-arguments.js"></script>
-        <script src="src/rest-spread-operators.js"></script>
-        <script src="src/destructuring.js"></script>
-        <script src="src/classes.js"></script>
-        <script src="src/for-of-loop.js"></script>
-        <script src="src/generators.js"></script>
-        <script src="src/generators-cont.js"></script>
-        <script src="src/promises.js"></script>
+      <h1>ES5 and ES2015(ES6) side by side</h1>
+      <p>Instructions: Open the console window to view outputs of the code.</p>
+      <h4>List of features covered:</h4>
+      <ul>
+        <li>Array Helpers</li>
+        <li>Variables - Constants and Let's</li>
+        <li>Template Strings</li>
+        <li>Arrow Functions</li>
+        <li>Object Literals</li>
+        <li>Default Function Arguments</li>
+        <li>Rest Spread Operators</li>
+        <li>Destructuring</li>
+        <li>Classes</li>
+        <li>for of loop</li>
+        <li>Generators</li>
+        <li>promises</li>
+      </ul>
+      <script src="src/array-helpers.js"></script>
+      <script src="src/variables.js"></script>
+      <script src="src/template-strings.js"></script>
+      <script src="src/arrow-functions.js"></script>
+      <script src="src/object-literals.js"></script>
+      <script src="src/default-function-arguments.js"></script>
+      <script src="src/rest-spread-operators.js"></script>
+      <script src="src/destructuring.js"></script>
+      <script src="src/classes.js"></script>
+      <script src="src/for-of-loop.js"></script>
+      <script src="src/generators.js"></script>
+      <script src="src/generators-cont.js"></script>
+      <script src="src/promises.js"></script>
     </body>
 </html>
